added 12ths news about Twilio acquisition

--- a/_posts/2020-09-01-News-Sept.md
+++ b/_posts/2020-09-01-News-Sept.md
@@ -14,6 +14,7 @@ date: 2020-09-01
 4. [Tesla to acquire German battery assembly maker](#tesla-to-acquire-german-battery-assembly-maker)  
 5. [Musk's SpaceX wins Pentagon award for missile tracking satellites](#musk-s-space-x-wins-pentagon-award-for-missile-tracking-satellites)   
 6. [Microsoft takes action to resolve 365 services accessibility issues](#microsoft-takes-action-to-resolve-365-services-accessibility-issues)   
+7. [Twilio Set To Acquire Cloud Customer Data Startup Segment For $3.2 Billion](#twilio-set-to-acquire-cloud-customer-data-startup-segment-for-3-2-billion)
 
 
 
@@ -110,16 +111,16 @@ date: 2020-09-01
 
 
 
-## [October 10th, 2020]
+## [October 12th, 2020]
 
-##  
-- **Who:**  
-- **What:**
-- **When:**  
-- **Why:**
-- **How:**  
-- **So?:**
-- [Link to the article]()
+##  Twilio Set To Acquire Cloud Customer Data Startup Segment For $3.2 Billion
+- **Who:**  Cloud communications platform provider Twilio Inc.
+- **What:**  They plan on buying customer data infrastructure company Segment for $3.2 billion.
+- **When:**  9th of October, 2020
+- **Why:**  San Francisco-based Segment has recently been open to acquisition offers, according to the report. Two companies have obvious overlap with each other through its software tools, which also help clients connect with their customer base
+- **How:**  Twilio will finalize its plans with Segment partially based on its stock. Twilio has been a beneficiary of pandemic-catalyzed digital transformation acceleration, as the demand for cloud companies have surged due to the switch to work from home.
+- **So?:**  The deal is to be finalized and the growth for both companies are to be rising - Segment insiders set to receive Twilio shares might hope for a repeat of the history of the acquisition of the API provider SendGrid, which the stock value has risen up to $3 billion from its original $2 billion.
+- [Link to the article](https://www.forbes.com/sites/alexkonrad/2020/10/09/twilio-to-acquire-cloud-startup-segment-for-3-billion/#60963fb62020)
 
 
 
