--- a/_posts/2020-09-07-Int-Jazz2.md
+++ b/_posts/2020-09-07-Int-Jazz2.md
@@ -38,6 +38,7 @@ date: 2020-09-07
 
 
 
+
 #### Steps and Pseudocode
 ##### Example  
 
@@ -102,45 +103,143 @@ int count_bits(struct node_t *n){
 
 
 
-##Code
+## Full Code
+```
+#include <stdio.h>
+#include <stdlib.h>
 
-struct node_t { 
-  uint8_t data; 
-  struct node_t *left; 
-  struct node_t  *right;
- }; 
-
-void pre_order_traversal(struct node* root) {
-  // set the count variable for each subtree
-  int root_count, left_count, right_count = 0;
-
-  if (root != NULL)
-    root_count = count_bits(root);
-    left_count = count_bits(root->left);
-    right_count = count_bits(root->right);
-
-  return root_count+left_count+right_count;
+struct node {
+   uint8_t data;
+   struct node *left;
+   struct node *right;
+};
 
 
-int count_bits(struct node_t *n){
-  uint8_t data = n->data; 
+struct node *root = NULL;
+
+void insert(int data) {
+   struct node *tempNode = (struct node*) malloc(sizeof(struct node));
+   struct node *current;
+   struct node *parent;
+
+   tempNode->data = data;
+   tempNode->left = NULL;
+   tempNode->right = NULL;
+
+   //if tree is empty
+   if(root == NULL) {
+      root = tempNode;
+   } else {
+      current = root;
+      parent = NULL;
+
+      while(1) {
+         parent = current;
+				 // printf("%d\n", parent->data);
+
+         //go to left of the tree
+         if(data < parent->data) {
+            current = current->left;
+
+            //insert to the left
+            if(current == NULL) {
+               parent->left = tempNode;
+							 // printf("%d\n", tempNode->data);
+               return;
+            }
+         }  //go to right of the tree
+         else {
+            current = current->right;
+
+            //insert to the right
+            if(current == NULL) {
+               parent->right = tempNode;
+							 // printf("%d\n", tempNode->data);
+               return;
+            }
+         }
+      }
+   }
+}
+
+
+
+int count_bits(struct node *n){
+	uint8_t data = n->data; //memeber called data from struct n
   int count = 0;
 
   // bc its unsigned int 8 hence 8 bits (1byte) (range = 0 to 255)
-  for (int i = 0; i <= 8; i++){
+  // for (int i = 0; i < 8; i++){
+  while (data){
     // check if last bit is odd ( bc its always +1)
-    if (int i % 2 == 1) {
-      count +=1
+    if (data % 2 == 1) {
+      count +=1;
     }
-    // then shift one bit
-    i >> 1
-
+    // rightshift one bit
+    data = data >> 1;
+  }
+	// printf ("count: %d\n", count);
     return count;
   }
 
 
 
-! key
-- bitshiftitng  
+int pre_order_traversal(struct node* root) {
+  // set the count variable for each subtree
+  int root_count, left_count, right_count = 0;
+  uint8_t data = root->data; //memeber called data from struct n
+  int count = 0;
 
-- Tree insertion source code [link](https://www.tutorialspoint.com/data_structures_algorithms/tree_traversal_in_c.htm)
+  if (root == NULL) {
+    return 0;
+  }
+
+
+  // bc its unsigned int 8 hence 8 bits (1byte) (range = 0 to 255)
+  // for (int i = 0; i < 8; i++){
+  while (data){
+    // check if last bit is odd ( bc its always +1)
+    if (data % 2 == 1) {
+      count +=1;
+    }
+    // rightshift one bit
+    data = data >> 1;
+  }
+  printf ("count: %d\n", count);
+////////////////////
+
+    // Traverse Left Subtree
+    left_count = pre_order_traversal(root->left);
+
+    // Traverse Right Subtree
+    right_count = pre_order_traversal(root->right);
+
+  return count+left_count+right_count;
+}
+
+//////////
+
+int main() {
+   int i;
+   // int array[5] = { 10,6,18,4,8};
+	 // int array[5] = { 20,10,30,8,15};
+   int array[5] = { 10,4,14,2,6};
+
+	 int count = 0;
+
+   for(i = 0; i < 5; i++){
+		 insert(array[i]);
+	 }
+
+	 // pre_order_traversal(root);
+    count = pre_order_traversal(root);
+		printf("\nTotal set bits: %d \n", count);
+
+		return 0;
+}
+
+```
+
+### Key points
+- Bit shifting  
+- Tree insertion - [Reference link](https://www.tutorialspoint.com/data_structures_algorithms/tree_traversal_in_c.htm)
