--- a/_posts/2020-09-07-Int-Jazz2.md
+++ b/_posts/2020-09-07-Int-Jazz2.md
@@ -76,7 +76,7 @@ void pre_order_traversal(struct node* root) {
 
 ##### Algorithm 2. Check set bits
   - Check if the last bit is odd.
-    - if odd then ans+1
+    - if odd then count++
   - Shift the bits to the right
   - Shift until the end of the bits
 
@@ -117,6 +117,7 @@ struct node {
 
 struct node *root = NULL;
 
+// Inserting data into the tree
 void insert(int data) {
    struct node *tempNode = (struct node*) malloc(sizeof(struct node));
    struct node *current;
@@ -163,40 +164,18 @@ void insert(int data) {
 }
 
 
-
-int count_bits(struct node *n){
-	uint8_t data = n->data; //memeber called data from struct n
-  int count = 0;
-
-  // bc its unsigned int 8 hence 8 bits (1byte) (range = 0 to 255)
-  // for (int i = 0; i < 8; i++){
-  while (data){
-    // check if last bit is odd ( bc its always +1)
-    if (data % 2 == 1) {
-      count +=1;
-    }
-    // rightshift one bit
-    data = data >> 1;
-  }
-	// printf ("count: %d\n", count);
-    return count;
-  }
-
-
-
 int pre_order_traversal(struct node* root) {
   // set the count variable for each subtree
   int root_count, left_count, right_count = 0;
-  uint8_t data = root->data; //memeber called data from struct n
-  int count = 0;
 
   if (root == NULL) {
     return 0;
   }
 
+  uint8_t data = root->data;
+  int count = 0;
 
   // bc its unsigned int 8 hence 8 bits (1byte) (range = 0 to 255)
-  // for (int i = 0; i < 8; i++){
   while (data){
     // check if last bit is odd ( bc its always +1)
     if (data % 2 == 1) {
@@ -205,8 +184,6 @@ int pre_order_traversal(struct node* root) {
     // rightshift one bit
     data = data >> 1;
   }
-  printf ("count: %d\n", count);
-////////////////////
 
     // Traverse Left Subtree
     left_count = pre_order_traversal(root->left);
@@ -217,10 +194,11 @@ int pre_order_traversal(struct node* root) {
   return count+left_count+right_count;
 }
 
-//////////
 
 int main() {
    int i;
+
+   // Test cases
    // int array[5] = { 10,6,18,4,8};
 	 // int array[5] = { 20,10,30,8,15};
    int array[5] = { 10,4,14,2,6};
@@ -231,7 +209,6 @@ int main() {
 		 insert(array[i]);
 	 }
 
-	 // pre_order_traversal(root);
     count = pre_order_traversal(root);
 		printf("\nTotal set bits: %d \n", count);
 
@@ -240,6 +217,22 @@ int main() {
 
 ```
 
+#### Test Cases
+> **Input:** {0,6,18,4,8}  
+> **Output:** 8
+
+> **Input:** {10,4,14,2,6}  
+> **Output:** 9
+
+> **Input:** {20,10,30,8,15}  
+> **Output:** 13
+
+
+
+
+
+
 ### Key points
 - Bit shifting  
 - Tree insertion - [Reference link](https://www.tutorialspoint.com/data_structures_algorithms/tree_traversal_in_c.htm)
+- Pre-order tree traversal 
