edited the diagram binary error

--- a/_posts/2020-09-07-Int-Jazz2.md
+++ b/_posts/2020-09-07-Int-Jazz2.md
@@ -44,7 +44,10 @@ date: 2020-09-07
 
 | Input | Input in Binary | Result |  
 | ----- | ------ | ------ |
-|![1](https://user-images.githubusercontent.com/33334078/93730142-525a3880-fc02-11ea-956e-43fd025265b8.png) | ![2](https://user-images.githubusercontent.com/33334078/93730145-55edbf80-fc02-11ea-8087-1b2fba11ac2a.png) | **9** |  
+| ![1](https://user-images.githubusercontent.com/33334078/93730142-525a3880-fc02-11ea-956e-43fd025265b8.png) | ![2](https://user-images.githubusercontent.com/33334078/95733608-589d7b00-0cbd-11eb-85d4-d34ff5c6f1f4.png) | **8** (root: 2, left-subtree: 4, right-subtree: 2)|  
+10,4,14,2,6 | 1010, 100,10,110,1110 | **9** (root: 2, left-subtree: 4, right-subtree: 3)|
+
+
 
 
 
@@ -104,6 +107,8 @@ int count_bits(struct node_t *n){
 
 
 ## Full Code
+ - The two functions have been merged to one function that is called recursively, to count the set bits and to traverse the right and left subtree.
+
 ```
 #include <stdio.h>
 #include <stdlib.h>
@@ -218,7 +223,7 @@ int main() {
 ```
 
 #### Test Cases
-> **Input:** {0,6,18,4,8}  
+> **Input:** {10,6,18,4,8}  
 > **Output:** 8
 
 > **Input:** {10,4,14,2,6}  
@@ -235,4 +240,4 @@ int main() {
 ### Key points
 - Bit shifting  
 - Tree insertion - [Reference link](https://www.tutorialspoint.com/data_structures_algorithms/tree_traversal_in_c.htm)
-- Pre-order tree traversal 
+- Pre-order tree traversal
