added syntax highlighting

--- a/_posts/2020-09-07-Int-Jazz2.md
+++ b/_posts/2020-09-07-Int-Jazz2.md
@@ -1,6 +1,6 @@
 ---
 title: "Jazz Networks - Binary tree and List"
-tags: [Interview Preparation, Binary Tree, List]
+tags: [Interview Preparation, Binary Tree]
 categories:
   - Interview Preparation
 date: 2020-09-07
@@ -60,7 +60,7 @@ date: 2020-09-07
 
 
 ###### Code
-```
+```c
 /* A binary tree node has data, pointer to left child
    and a pointer to right child */
 
@@ -77,15 +77,16 @@ void pre_order_traversal(struct node* root) {
 ```
 
 
+
 ##### Algorithm 2. Check set bits
   - Check if the last bit is odd.
     - if odd then count++
   - Shift the bits to the right
   - Shift until the end of the bits
 
-###### Code
-```
 
+###### Code
+```c
 int count_bits(struct node_t *n){
   uint8_t data = n->data; 
   int count = 0;
@@ -101,7 +102,6 @@ int count_bits(struct node_t *n){
 
     return count;
   }
-
 ```
 
 
@@ -109,7 +109,7 @@ int count_bits(struct node_t *n){
 ## Full Code
  - The two functions have been merged to one function that is called recursively, to count the set bits and to traverse the right and left subtree.
 
-```
+```c
 #include <stdio.h>
 #include <stdlib.h>
 
@@ -141,8 +141,6 @@ void insert(int data) {
 
       while(1) {
          parent = current;
-				 // printf("%d\n", parent->data);
-
          //go to left of the tree
          if(data < parent->data) {
             current = current->left;
@@ -150,7 +148,6 @@ void insert(int data) {
             //insert to the left
             if(current == NULL) {
                parent->left = tempNode;
-							 // printf("%d\n", tempNode->data);
                return;
             }
          }  //go to right of the tree
@@ -160,7 +157,6 @@ void insert(int data) {
             //insert to the right
             if(current == NULL) {
                parent->right = tempNode;
-							 // printf("%d\n", tempNode->data);
                return;
             }
          }
@@ -201,23 +197,23 @@ int pre_order_traversal(struct node* root) {
 
 
 int main() {
-   int i;
+  int i;
 
-   // Test cases
-   // int array[5] = { 10,6,18,4,8};
-	 // int array[5] = { 20,10,30,8,15};
-   int array[5] = { 10,4,14,2,6};
+  // Test cases
+  // int array[5] = { 10,6,18,4,8};
+  // int array[5] = { 20,10,30,8,15};
+  int array[5] = { 10,4,14,2,6};
 
-	 int count = 0;
+  int count = 0;
 
-   for(i = 0; i < 5; i++){
-		 insert(array[i]);
-	 }
+  for(i = 0; i < 5; i++){
+   insert(array[i]);
+  }
 
-    count = pre_order_traversal(root);
-		printf("\nTotal set bits: %d \n", count);
+  count = pre_order_traversal(root);
+  printf("\nTotal set bits: %d \n", count);
 
-		return 0;
+	return 0;
 }
 
 ```
