Edited code style and TOC

--- a/_posts/2020-09-07-Int-Jazz2.md
+++ b/_posts/2020-09-07-Int-Jazz2.md
@@ -7,14 +7,18 @@ date: 2020-09-07
 ---
 
 
-## Q - Implement a function that counts the set bit of a binary tree in C.
+# Q - Implement a function that counts the set bit of a binary tree in C.
 1. [Binary tree](#what-is-a-binary-tree)  
   1.1 [Binary Search Tree](#binary-search-tree)
 2. [Steps and Pseudocode](#steps-and-pseudocode)
-3. [Implementation](#implementation)
+  2.1 [Example](#example)
+  2.2 [Algorithm 1. Tree traversal](#algorithm-1-tree-traversal)
+  2.3 [Algorithm 2. Check set bits](#algorithm-2-check-set-bits)
+3. [Full Implementation](#full-implementation)
+4. [Test Cases](#test-cases)
 
 
-### 1. What is a Binary Tree?
+## 1. What is a Binary Tree?
 - A tree whose elements have at most 2 child nodes - the left and the right node.
 - Nodes with no children are called 'leaves'.  
 - The height h of a complete binary tree with N nodes is at most **O(log N)**.
@@ -28,7 +32,7 @@ date: 2020-09-07
 | ![Screenshot 2020-09-08 at 10 19 55 am](https://user-images.githubusercontent.com/33334078/92423656-d8b35b00-f1bc-11ea-8a2e-7f2c0be24907.png) | ![Screenshot 2020-09-08 at 10 20 08 am](https://user-images.githubusercontent.com/33334078/92423669-e072ff80-f1bc-11ea-8a8a-2786f6e10ff5.png) |
 
 
-#### Binary Search Tree
+### Binary Search Tree
 - Each node contains **one** key (also known as data)
 - The keys in the **left subtree are less then the key in its parent node**, in short L < P;
   - 10 > 6, 4, 8
@@ -39,9 +43,8 @@ date: 2020-09-07
 
 
 
-#### Steps and Pseudocode
-##### Example  
-
+## Steps and Pseudocode
+### Example  
 | Input | Input in Binary | Result |  
 | ----- | ------ | ------ |
 | ![1](https://user-images.githubusercontent.com/33334078/93730142-525a3880-fc02-11ea-956e-43fd025265b8.png) | ![2](https://user-images.githubusercontent.com/33334078/95733608-589d7b00-0cbd-11eb-85d4-d34ff5c6f1f4.png) | **8** (root: 2, left-subtree: 4, right-subtree: 2)|  
@@ -49,9 +52,7 @@ date: 2020-09-07
 
 
 
-
-
-##### Algorithm 1. Tree traversal
+### Algorithm 1. Tree traversal
 - Traverse the tree from the root, to the left and the right sub-tree (Pre-order - root, left, right)
 - **Steps**
   1. Visit the root
@@ -59,12 +60,11 @@ date: 2020-09-07
   3. Traverse the right subtree
 
 
-###### Code
-```c
-/* A binary tree node has data, pointer to left child
-   and a pointer to right child */
 
-struct node_t { 
+#### Code
+```c
+/* A binary tree node has data, pointer to left child and a pointer to right child */
+struct node_t  { 
   uint8_t data; 
   struct node_t *left; 
   struct node_t  *right;
@@ -72,20 +72,22 @@ struct node_t { 
 
 void pre_order_traversal(struct node* root) {
   if (root != NULL)
-    pre_order_traversal(root->left)
-    pre_order_traversal(root->right)
-```
+    pre_order_traversal(root->left);
+    pre_order_traversal(root->right);
+
+```   
 
 
 
-##### Algorithm 2. Check set bits
-  - Check if the last bit is odd.
-    - if odd then count++
-  - Shift the bits to the right
-  - Shift until the end of the bits
+
+### Algorithm 2. Check set bits
+- Check if the last bit is odd.
+  - if odd then count++1
+- Shift the bits to the right
+- Shift until the end of the bits
 
 
-###### Code
+#### Code
 ```c
 int count_bits(struct node_t *n){
   uint8_t data = n->data; 
@@ -106,7 +108,8 @@ int count_bits(struct node_t *n){
 
 
 
-## Full Code
+
+## Full Implementation
  - The two functions have been merged to one function that is called recursively, to count the set bits and to traverse the right and left subtree.
 
 ```c
@@ -175,7 +178,6 @@ int pre_order_traversal(struct node* root) {
 
   uint8_t data = root->data;
   int count = 0;
-
   // bc its unsigned int 8 hence 8 bits (1byte) (range = 0 to 255)
   while (data){
     // check if last bit is odd ( bc its always +1)
@@ -185,10 +187,8 @@ int pre_order_traversal(struct node* root) {
     // rightshift one bit
     data = data >> 1;
   }
-
     // Traverse Left Subtree
     left_count = pre_order_traversal(root->left);
-
     // Traverse Right Subtree
     right_count = pre_order_traversal(root->right);
 
@@ -218,7 +218,7 @@ int main() {
 
 ```
 
-#### Test Cases
+## Test Cases
 > **Input:** {10,6,18,4,8}  
 > **Output:** 8
 
@@ -228,7 +228,7 @@ int main() {
 > **Input:** {20,10,30,8,15}  
 > **Output:** 13
 
-
+- Matches the Example test cases from 2.1.
 
 
 
