--- a/_posts/2020-09-07-Int-Jazz2.md
+++ b/_posts/2020-09-07-Int-Jazz2.md
@@ -7,15 +7,15 @@ date: 2020-09-07
 ---
 
 
-# Q - Implement a function that counts the set bit of a binary tree in C.
+# Q1. Implement a function that counts the set bit of a binary tree in C.
 1. [Binary tree](#what-is-a-binary-tree)  
   1.1 [Binary Search Tree](#binary-search-tree)
-2. [Steps and Pseudocode](#steps-and-pseudocode)
-  2.1 [Example](#example)
-  2.2 [Algorithm 1. Tree traversal](#algorithm-1-tree-traversal)
-  2.3 [Algorithm 2. Check set bits](#algorithm-2-check-set-bits)
-3. [Full Implementation](#full-implementation)
-4. [Test Cases](#test-cases)
+2. [Steps and Pseudocode](#steps-and-pseudocode)  
+  2.1 [Example](#example)  
+  2.2 [Algorithm 1. Tree traversal](#algorithm-1-tree-traversal)  
+  2.3 [Algorithm 2. Check set bits](#algorithm-2-check-set-bits)  
+3. [Full Implementation](#full-implementation)   
+4. [Test Cases](#test-cases)  
 
 
 ## 1. What is a Binary Tree?
