Changed heading style

--- a/_posts/2020-09-07-Int-Jazz1.md
+++ b/_posts/2020-09-07-Int-Jazz1.md
@@ -9,9 +9,12 @@ date: 2020-09-07
 
 
 
-### 2. Given an unsorted list with a missing number, write a function that finds the missing number in the list.
+# Q2. Given an unsorted list with a missing number, write a function that finds the missing number in the list.
  - [1,4,6,2,5,7]  # missing = 3
 
+
+Table of Contents
+1. 
 
 
 
