14th's news about edge computing

--- a/_posts/2020-09-01-News-Sept.md
+++ b/_posts/2020-09-01-News-Sept.md
@@ -14,8 +14,8 @@ date: 2020-09-01
 4. [Tesla to acquire German battery assembly maker](#tesla-to-acquire-german-battery-assembly-maker)  
 5. [Musk's SpaceX wins Pentagon award for missile tracking satellites](#musk-s-space-x-wins-pentagon-award-for-missile-tracking-satellites)   
 6. [Microsoft takes action to resolve 365 services accessibility issues](#microsoft-takes-action-to-resolve-365-services-accessibility-issues)   
-7. [Twilio Set To Acquire Cloud Customer Data Startup Segment For $3.2 Billion](#twilio-set-to-acquire-cloud-customer-data-startup-segment-for-3-2-billion)
-
+7. [Twilio Set To Acquire Cloud Customer Data Startup Segment For $3.2 Billion](#twilio-set-to-acquire-cloud-customer-data-startup-segment-for-3-2-billion)    
+8. [Trends Continue to Push Processing to the Edge for AI](#trends-continue-to-push-processing-to-the-edge-for-ai)
 
 
 ## [September 1st, 2020]
@@ -126,16 +126,22 @@ date: 2020-09-01
 
 
 
-## [October 12th, 2020]
+## [October 14th, 2020]
 
-##  
-- **Who:**  
-- **What:**
-- **When:**  
+##  Trends Continue to Push Processing to the Edge for AI
+- **Who:**  The technology markets
+- **What:**  In recent years, edge computing architecture has moved to the fore, to accommodate the proliferation of data and devices as well as the velocity at which this data is moving. More tech giants are moving towards the edge computing market.
+  - NVDIA plans to continue the push of AI being closer to the edge - with its new NVIDIA-Arm deal.
+  - VMware annnounced a Project Monetary that involves partnership with several companies, including NVIDIA, to bolster infrastructure to support AI applications at the edge.
+  - For the connected-things market, moving processing down the stack and into these distributed edge architectures will be a major boon for data-intensive processes that need rapid response times.
+- **When:** In the recent years
 - **Why:**
-- **How:**  
+  - Device proliferation and data volumes now favor distributed computing models for speed, performance and data security reasons.
+- **How:**  By offloading tasks to the edge processor, making more of the processing power the customer paid for available.
 - **So?:**
-- [Link to the article]()
+  - Many processes and industries will benefit from pushing processing to the edge, including Industrial IoT and consumer-based IoT.
+  - The edge computing market is expected to grow from $3.6 billion in 2020 to $15.7 billion by 2025, according to MarketsandMarkets data.
+- [Link to the article](https://www.iotworldtoday.com/2020/10/13/trends-continue-to-push-processing-to-the-edge-for-ai/)
 
 
 
