--- a/_posts/2020-10-12-RS-2.md
+++ b/_posts/2020-10-12-RS-2.md
@@ -1,152 +1,193 @@
 ---
-title: "Introduction"
+title: "General Schema of User Adaptive Systems"
 tags: [Recommender Systems]
 categories:
   - Recommender Systems
 date: 2020-10-12
 ---
 
+## **General Schema of User Adaptive Systems**
 
-## **Introduction**
+**Schema of user-Adaptive Systems**
+  - ![image](https://user-images.githubusercontent.com/33334078/95707698-37c12f80-0c95-11eb-985c-756d9df937e4.png)
 
-**Augmenting human intelligence**
-  - ![image](https://user-images.githubusercontent.com/33334078/95707611-ef097680-0c94-11eb-84b7-33126f74f829.png)
-  - Intelligent system **to make smarter decisions, preserve knowledge,
-    learn** from experience and change behaviour
-  - This model is understanding the users and how we gonna adapt to
-    those users
-  - Also understanding the connectivity, taking into account the world
-    and users
-  - Ideas of nudging – can nudge the ppl to do better things – amazon
-    nudging us to buy stuff
+1.  **Information collection -** When we start to design UAS, we need to
+    think what info system will have about the user (**available info
+    about the user**)
 
-**The personalisation buzz**
-  - Having a computer system to adapt to users
-      - Tailored to what we need, want and best fits current state
-  - Human to human interaction and personalisation is natural
-      - Speaking very slow
-      - Recommending what to buy
-  - BUT can we adapt the human AND the **computer** and can this be
-    personalised?
-  - How to make systems that are not personalised to personalised.
-      - Minerva – not tailored - how do we tailor the website to suit each student?
+2.  **User model acquisition -** Using this information, how can u
+    process that information (metrics, and needa analyse them)
+    1.  First key – **relevance** of the information with the situation
+    2.  Second key – **representation of the data** – is it enough
+        information to determine the world? And we need to realize that
+        we are not seeing the whole world
+    3.  Third – **reliability** – is this really capturing what the user
+        is saying
+    4.  E.g.
+        - Is the feedback relevant to the patient and was it enough to
+            represent the situation and the real world. Doctor talks for
+            30 mins but only writes one sentence. Not good
+            representation
 
-**Past: Need for personalisation**
-  - Whenever something is modified in its configuration or behaviour by
-    information about the user, this is personalisation
-  - Industries should not think if to personalise or not, instead u
-    gotta think HOW you are gonna personalise !!
-  - If we are delivering info, we need: right info to the right person, at right time in right way
-      - **right** \!\!\! is the smartness
+3.  **User model -** After processing of the data you come up with a
+    **user model**
+      - Could be db, XML, knowledge model
+      - Is important to represent characteristics you can use for ur application
+      - It ties it all together and give meaning and **structure** to
+        the data we collected
 
 
-**Today**
-  - We are using personalisation from different industries
-      - Ecommerce – amazon, ebay etc
-      - Search – you'll get 2 different response if you search for 2 different laptop
-      - Mobile devices and desktops
-      - Variation of personalised digital portals – newspaper, libraries
-        etc
-
-**Why do we need personalisation?**
-  - Key factors – **right** right right
-  - Available info
-      - Heterogeneity – is overwhelming so gotta help them find the
-        right info
-      - Noise
-      - Constraints – bandwidth and time – how much you can absorb all
-        these information
-      - To narrow down the information
-
-  - People
-      - In the past, we had program used by typical users used
-        uniformly. However, the systems we use, we have massive users
-        with different **capabilities and background**, So you need to adapt
-      - different task, goal, intentions
-      - different context – in different settings and what info
-      - Affective states – emotional. Not exactly clear what effect it
-        has
+4.  **User model application** – thinking of ways to interfere with the
+    user, given the user model
+      - Can use clustering, classification, simple analysis etc
 
 
+5.  **Adapting to user -** Finally user sees the **interface**
+      - Could be that it is larger, colour is different, you get more
+        description about an item
 
-**Two Types of personalisation – 2<sup>nd</sup> core slide**
-  - **Adaptable systems (customisable)**
-      - User is able to modify aspects of the system to suit their
-        preferences
-          - I wanna get these types of news and you set up a filter
-      - Limitation – they don’t know what and how to customize
-      - Plus – interface wise, to get the user to pick and mix
-  - **Adaptive systems**
-      - Automatically changes their behaviour due to smart engine
-        independent of user specifications
-          - YouTube recommendation
-      - \!\! Core part of this module
-  - Intermediate cases
-      - System proposes possible adaptations and user decides to accept
-
-**User adaptive system & AI**
-  - ![image](https://user-images.githubusercontent.com/33334078/95707624-fa5ca200-0c94-11eb-9c16-b06f449a8a10.png)
-  - No human
-      - Ai could be just one – simple automated intelligence
-      - Capable of taking decisions itself – autonomous intelligence
-
-**Example: user-ADAPTABLE interface**
-  - Web browser - Can change layout and what to see, choose content
-  - Human Computer Interaction
-
-**\!\! Example; user ADAPTIVE interface**
-  - Start menu in windows. It narrow downs the program of what programs
-    user consume and it picks that as the users preferred option
-  - Limitations – too many and not adaptive, hence not regular
-      - Narrowing down the users, and it takes long to find it
-      - Then go back to customisation and ask them
-      - We use spatial memory to know whereabouts stuff are – causes
-        confusion. For e.g in different languages and you uses spatial memory
-
-**More recent examples**
-  - MoCoMapps
-      - Massive amt of information of cities and how to encourage ppl to
-        contribute to it. How social technologies can help cities be
-        smarter – civic engagement, tourism,
-      - Customizable interface
-      - Specifies the types of data --> customization
-      - It takes what's important for the person and recommends it – adaptive
-
-  - Ecoach
-      - Mid agent of Minerva – you register and fill in personal info
-      - Asks to do a psychometric test to identify learners’ motivational factors
-      - Links to uni's student information page
-      - And it gives simple adaptations such as reminders and feedbacks
-      - Recommendations of adaptive content in a motivational way
-
-  - Google map – if you rate then it gives you recommendations of new places you might like
-
-**Personalisation from consumer perspective**
-  - 80% of consumers stick to a business if the system is
-    personalised
-  - Personalisation improves the customer experience
-  - What do they see as personalisation?
-      - Customisation - something suited to me so I'm more interested
-      - Service – companies will know what I want and help w the
-        experience
-      - Discount and offers – personalised offers
-      - Specific products that are tailored to them
-      - Convenience with user
-  - What do we notice here?
-      - This is looking at the positives – and that the data collected
-        is used for their convenience
-  - Top personalisation experiences
-      - Coupon, discounts - 31% that provides discounts due to
-        personalisation
-  - Top company - Amazon
-  - What do you want to see in personalised message?
-      - Recognition of who they are
-      - Help them buy stuff
-      - ![image](https://user-images.githubusercontent.com/33334078/95707661-14968000-0c95-11eb-87ee-1fab4fe72192.png)
+  - Need to have confidence in the model and information
 
 
-**Personalisation of business perspective**
-  - 50% of companies are providing personalisation
-  - What could be the possibility of personalisation?
-      - Recommender, personal shopper, diagnostic, filter, teacher user
-        adaptive intelligent system
+**Main definitions**
+  - **User model** – **data structure** that contains explicit
+    assumptions on all aspects of User that are relevant to the adaptive
+    behaviour of the system
+  - **User model acquisition –** procedure that incrementally constructs
+    the user model and its functions to:
+      - Store, update and delete entries in the user model;
+      - Maintain user model **consistency** - How we update the user
+        model etc
+      - Need to ensure the user model **validity** – it is deriving from
+        the model hence it needs to be valid
+  - **User model application –** uses the user model to:
+      - Make predictions and based on that you make decisions about User
+
+**Discussion –** what is the most important?
+  - **Information about the user** – gotta have the right information to
+    start with, as everything is dependent on it
+  - **User model acquisition** – bc you gotta collect and pick the right
+    data
+  - **Adapting to user** (interface)– when working with end users, this
+    is what users see– HCI
+  - **User model application** –
+  - **User model** – user model gives meaning to the information by
+    giving it a structure
+  - By choosing what's the most important they compute differently – HCI or
+    data processing or etc
+  - Need to have confidence in the user model
+
+**Examples – Jameson’s paper**
+
+  - Summarized into 2 forms to adapting
+
+  - **Supporting system use** – helps the user to use the system so they    continue using it
+      - Can take over parts of routine tasks
+      - \*Adapt interface – smart menu
+      - Helping w system use – simple guidance
+      - Mediating interaction w the real world
+      - Controlling dialogue
+
+
+  - **Supporting information acquisition**
+      - help them find info
+      - recommend products
+      - tailor information presentation
+      - support collaboration
+      - \*support learning – SQL tutor
+
+
+**Adapting the interface - Smart menus**
+
+  - We need to think about what info we have about user, diff views of
+    the menu as user goes thru them
+  - **General schema of smart menus**
+  - ![image](https://user-images.githubusercontent.com/33334078/95707718-47407880-0c95-11eb-9b1f-2a594a76eac2.png)
+
+    1.  Collects info about menus that user clicks – this is the input
+        of the algorithm (or how long user stays, what files etc)
+    2.  Model aquisition – register the menus that user select
+    3.  User model – need some way to process and come up w
+        identification of if it is a frequently used actions
+          - Frequency, recency
+    4.  Reason about user’s option choices ?
+    5.  Modified menu content – showing the smart options
+
+**Supporting learning - SQL tutor**
+  - Learning system - We have a digital info to read, a quiz, analyse
+    then you decide if you are progressing
+      - How confident they are with diff SQL commands – SELECT, ORDER BY
+
+
+  - **General schema of SQL tutor**
+    1.  User writes SQL queries
+    2.  Application of **constraints** on Users solution – then it ticks
+        how many constraints have been ticked. They write rules for each
+        problem (constraints) to score it
+    3.  Subset of constraints mastered/ missed by user - if the user is
+        not good at SELECT, pull out more related problems. It decides
+        what problem subset is appropriate for the user
+    4.  Rule-based engine consulting the user model – how to generate
+        the feedback and how to make a coherent piece
+          - How constantly did you give a feedback?
+          - And as they become better u’ll fade and give less feedback
+    5.  Complexity and feedback – gives user feedback
+
+
+
+## **Example - Amazon**
+
+**Applying the schema to Amazon**
+  - We take info about the user and about external information
+
+
+**Adaptative features of amazon**
+  - Today’s recommendation for you
+  - New experience to the shopping – injecting knowledge
+  - Improve your recommendation
+  - All recommendation and a recommendation relating to ur order
+
+**Amazon – today’s recommendation**
+  - We need to implement the feature, then we need to sketch what it'll
+    look like.
+
+1.  What info do we have and what can we get values of
+      - User purchases, statements about ownerships, and ratings
+          - Rating - Very small amt of users are rating. even if they
+            rate they might rate it emotionally
+          - Problem with purchases
+              - Could’ve bought it as a present
+              - Regular or occasional shopper – is it reliable if they
+                only shop occasionally?
+
+
+2.  Processing algorithm
+      - We look at user attention, and select what's important and
+        **converting those clicks into interest** → extract into
+        database format
+
+
+3.  **User model** → additional information about all the other users,
+    bc you look at what other people buy
+      - Matrix of user by item – simple user model
+
+
+4.  **User model application**
+      - You choose item user is interested in from the **matrix**, and
+        recommend user the items
+          - And **outer knowledge** – other people’s interest
+      - By categories of the item to fetch the most common category
+          - **Metadata + external knowledge** that tells you about the
+            categories
+      - In both cases you need outer knowledge
+
+
+5.  **Recommendation**
+  - **Cold start –** if user hasn’t brought anything and you recommend
+    trending products
+
+
+**Amazon – recommendations for all products**
+  - Same info coming about the user
+  - Now they wanna surprise the user → in order to do that you need
+    external knowledge about the user
